# 99_haskell_problems

./: h99.cabal
src/H99/: Q01.hs  Q02.hs  Q03.hs  Q04.hs  Q05.hs  Q06.hs  Q07.hs  Q08.hs  Q09.hs
src/H99/Q01/: LastElementOf.hs
test/Q01/: LastOfListSpec.hs
test/Q02/: LastButOneOfListSpec.hs
test/Q03/: ElementAtSpec.hs
test/Q04/: ListLengthSpec.hs
test/Q05/: ReverseListSpec.hs
test/Q06/: IsPalindromeSpec.hs
test/Q07/: FlattenSpec.hs
test/Q08/: CompressListSpec.hs
test/Q09/: PackListSpec.hs
