name:                h99
version:             0.1.0.0
synopsis:            Take for https://wiki.haskell.org/H-99:_Ninety-Nine_Haskell_Problems
-- description:
homepage:            https://github.com/antonkorovin/99_haskell_problems
-- license:
-- license-file:        LICENSE
author:              Anton Korovin <korovin.anton@gmail.com>
maintainer:          <korovin.anton@gmail.com>
-- copyright:
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options      : -Wall
  hs-source-dirs   : src
  exposed-modules  : H99.Q01
  build-depends    : base
  default-language : Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , h99
    , hspec   == 2.*
